--- a/ToDoTask/ToDoTask.csproj
+++ b/ToDoTask/ToDoTask.csproj
@@ -26,6 +26,11 @@
     <Folder Include="ClientApp\src\actions\" />
     <Folder Include="ClientApp\src\reducers\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="ClientApp\src\components\TodosList.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
